Feat: 디테일 페이지 구현

--- a/src/color.css
+++ b/src/color.css
@@ -1,5 +1,6 @@
 :root {
   --color_white: #ffffff;
+  --color_gray: #777777;
   --color_black: #000000;
   --color_navy: #2b3a55;
   --color_pink1: #ce7777;
