--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,12 @@ button {
 
 /* 토글 버튼 클릭시 화면이 이동되면서,  */
 .toggle {
-  transform: translateX(-600px);
+  /* transform: translateX(-100px);
+   */
+  left: -600px !important;
+  & button {
+    background: none;
+  }
 }
 .toggleImg {
   transform: rotate(180deg);
